--- a/xf86-input-summa/trunk/PKGBUILD
+++ b/xf86-input-summa/trunk/PKGBUILD
@@ -2,22 +2,21 @@
 #Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=xf86-input-summa
-pkgver=1.1.0
-pkgrel=4
+pkgver=1.2.0
+pkgrel=1
 pkgdesc="X.org summa input driver"
 arch=(i686 x86_64)
 url="http://xorg.freedesktop.org/"
 depends=('glibc')
-makedepends=('pkgconfig' 'xorg-server>=1.1.1')
-options=('nolibtool')
+makedepends=('pkgconfig' 'xorg-server>=1.4.99.906')
+options=('!libtool')
 groups=('xorg-input-drivers')
 source=(${url}/releases/individual/driver/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('b37a432fd87bb9f46d011622d6fce6b3')
+md5sums=('7e17468c0d90dcbbb6202a8242efff4b')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
-  ./configure --prefix=/usr \
-              --build=${CHOST} --host=${CHOST}
+  ./configure --prefix=/usr || return 1
   make || return 1
   make DESTDIR=${startdir}/pkg install || return 1
 }
