--- a/repos/gnome-i686/PKGBUILD
+++ b/repos/gnome-i686/PKGBUILD
@@ -2,25 +2,26 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=gnome-power-manager
-pkgver=2.22.1
+pkgver=2.23.6
 pkgrel=1
 pkgdesc="Session daemon that makes it easy to manage your laptop or desktop system."
 arch=(i686 x86_64)
 url="http://www.gnome.org/projects/gnome-power-manager/"
 license=('GPL')
-depends=('libnotify>=0.4.4' 'gnome-panel>=2.22.0' 'gstreamer0.10>=0.10.18')
+depends=('libnotify>=0.4.4' 'gnome-panel>=2.23.90' 'gstreamer0.10>=0.10.18' 'policykit-gnome>=0.9.2')
 makedepends=('gettext' 'perlxml' 'pkgconfig' 'gnome-doc-utils>=0.12.2')
 options=(!emptydirs)
 install=gnome-power-manager.install
 groups=(gnome-extra)
-source=(http://ftp.gnome.org/pub/GNOME/sources/gnome-power-manager/2.22/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('bfb10f96771dd161ff16171f78a7dc21')
+source=(http://ftp.gnome.org/pub/GNOME/sources/gnome-power-manager/2.23/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('55213fb276108a4d6e9309aceab981fe')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
   ./configure --prefix=/usr --sysconfdir=/etc \
               --localstatedir=/var \
 	      --libexecdir=/usr/lib/gnome-power-manager \
+	      --enable-policykit \
 	      --with-dpms-ext \
               --disable-scrollkeeper \
               --with-dbus-sys=/etc/dbus-1/system.d \
