--- a/gnome-volume-manager/repos/gnome-i686/PKGBUILD
+++ b/gnome-volume-manager/repos/gnome-i686/PKGBUILD
@@ -4,27 +4,24 @@
 
 pkgname=gnome-volume-manager
 pkgver=2.22.5
-pkgrel=1
+pkgrel=2
 pkgdesc="GNOME daemon to auto-mount and manage media devices"
 arch=(i686 x86_64)
 license=('GPL')
 url=http://www.gnome.org/
-depends=('libgnomeui>=2.22.1' 'libnotify>=0.4.4' 'gnome-mount>=0.8')
-makedepends=('nautilus>=2.22.2' 'perlxml' 'pkgconfig')
+depends=('libgnomeui>=2.23.90' 'libnotify>=0.4.4' 'gnome-mount>=0.8' 'consolekit')
+makedepends=('nautilus>=2.23.90' 'perlxml' 'pkgconfig')
 install=gnome-volume-manager.install
 groups=('gnome-extra')
 options=(!emptydirs)
 source=(http://ftp.gnome.org/pub/GNOME/sources/${pkgname}/2.22/${pkgname}-${pkgver}.tar.bz2
 	gvm-mount-async.patch
-	gvm-check-local.patch)
-md5sums=('e761a5bdc8867419eb278c9e1a6a79ff'
-         '534b8b9633148bd975b2b9b518c41fb4'
-         '0171374e6bfda523c09a7dbfc1ec0c11')
+	icon-name.patch)
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
   patch -Np0 -i ${startdir}/src/gvm-mount-async.patch || return 1
-  patch -Np0 -i ${startdir}/src/gvm-check-local.patch || return 1
+  patch -Np1 -i ${srcdir}/icon-name.patch || return 1
   ./configure --prefix=/usr --sysconfdir=/etc \
               --localstatedir=/var --libexecdir=/usr/lib/gnome-volume-manager || return 1
   make || return 1
