--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,7 +1,7 @@
 # $Id$
-# Maintainer: judd <jvinet@zeroflux.org>
+# Maintainer: Andreas Radke <andyrtr@archlinux.org>
 
-# compile always twice: first binutils, then gcc, then binutils again
+# toolchain build order: kernel-headers->glibc->binutils->gcc-libs->gcc->binutils->glibc
 
 pkgname=binutils
 pkgver=2.18
