--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,29 +1,33 @@
 # $Id$
-# Maintainer: damir <damir@archlinux.org>
+# Maintainer: Ronald van Haren <ronald.archlinux.org>
 
 pkgname=qwt
-pkgver=5.0.2
+pkgver=5.1.1
 pkgrel=1
 pkgdesc="Qt Widgets for Technical Applications"
 arch=("i686" "x86_64")
 url="http://qwt.sourceforge.net/"
-depends=('qt>=4.3.1')
+depends=('qt>=4.4.1')
 options=('!makeflags')
 license=("custom:$pkgname")
 source=("http://downloads.sourceforge.net/sourceforge/qwt/$pkgname-$pkgver.tar.bz2" \
         "qwtconfig-archlinux.pri")
-md5sums=('53adbb313c478dd4aae4f1c864a2037e' '7e9353ff45dca2d1038becccbb0e7717')
+md5sums=('218cef1a39ebda6cfa440a0727464275'
+         '7e9353ff45dca2d1038becccbb0e7717')
 
 build() {
   cd $startdir/src/$pkgname-$pkgver
-#  . /etc/profile.d/qt3.sh
+
   # copy our config file to the right place
-  cp -f $startdir/src/qwtconfig-archlinux.pri $startdir/src/$pkgname-$pkgver/qwtconfig.pri || return 1
+  cp -f $srcdir/qwtconfig-archlinux.pri \
+	$srcdir/$pkgname-$pkgver/qwtconfig.pri || return 1
+
   # build qwt:
   qmake qwt.pro
   make || return 1
-  make INSTALL_ROOT=$startdir/pkg QTDIR=/usr install || return 1
+  make INSTALL_ROOT=$pkgdir QTDIR=/usr install || return 1
 
   # install licence
-  install -D -m644 $startdir/src/$pkgname-$pkgver/COPYING $startdir/pkg/usr/share/licenses/$pkgname/license.txt
+  install -D -m644 $srcdir/$pkgname-$pkgver/COPYING \
+	$pkgdir/usr/share/licenses/$pkgname/license.txt
 }
