--- a/celestia/repos/extra-i686/PKGBUILD
+++ b/celestia/repos/extra-i686/PKGBUILD
@@ -1,26 +1,30 @@
 # $Id$
+# Maintainer: Ronald van Haren <ronald.archlinux.org>
 # Contributor : Damir Perisa <damir.perisa@bluewin.ch>
-# Maintainer: damir <damir@archlinux.org>
 
 pkgname=celestia
-pkgver=1.5.0
+pkgver=1.5.1
 pkgrel=1
 pkgdesc="Real-time space simulation"
-arch=(i686 x86_64)
+arch=('i686' 'x86_64')
 license=('GPL2')
 url="http://www.shatters.net/celestia/"
 depends=('gtk2' 'libtheora' 'lua' 'gtkglext' 'glut' 'libxmu' 'mesa')
-source=(http://puzzle.dl.sourceforge.net/sourceforge/celestia/$pkgname-$pkgver.tar.gz) 
+source=(http://puzzle.dl.sourceforge.net/sourceforge/celestia/$pkgname-$pkgver.tar.gz
+	'celestia-1.5.1-gcc43.patch') 
+md5sums=('df6854a2cf62d2e96612398c13b68fd2'
+         '7c2b8921394b67e0a0498eaefa97b4b6')
 
 build() {
-    cd $startdir/src/$pkgname-$pkgver
+    cd $srcdir/$pkgname-$pkgver
+    patch -Np1 < $srcdir/celestia-1.5.1-gcc43.patch || return 1
+
     ./configure --prefix=/usr \
                 --with-lua=/usr \
 		--datadir=/usr/share \
                 --with-gtk 
     # build 
     make || return 1
-    make DESTDIR=$startdir/pkg install
+    make DESTDIR=$pkgdir install || return 1
 }
 
-md5sums=('156bc1080d27906122945a20d84d4a82')
