--- a/libmcs/trunk/PKGBUILD
+++ b/libmcs/trunk/PKGBUILD
@@ -1,30 +1,24 @@
 # $Id$
-# Maintainer: Travis Willard <travisw@wmpub.ca>
+# Maintainer: Alexander Fehr <pizzapunk gmail com>
 # Contributor: Brad Gordon <brad@rpgcyco.net>
 
 pkgname=libmcs
-pkgver=0.7.0
+pkgver=0.7.1
 pkgrel=1
-pkgdesc="A library and userland tools which abstract the storage of configuration settings"
+pkgdesc="Library which abstracts the storage of configuration settings"
 arch=('i686' 'x86_64')
-url="http://www.atheme.org/projects/mcs.shtml"
+url="http://distfiles.atheme.org/"
 license=('BSD')
-depends=('glibc' 'libmowgli')
-makedepends=('pkgconfig')
-source=(http://distfiles.atheme.org/${pkgname}-${pkgver}.tgz)
-options=('!libtool')
+depends=('libmowgli')
+source=(http://distfiles.atheme.org/libmcs-$pkgver.tbz2)
+md5sums=('42e9383654fe7ec573729c79a1d0f513')
 
 build() {
-  cd ${startdir}/src/${pkgname}-${pkgver}
+  cd "$srcdir/libmcs-$pkgver"
 
-  ./configure --prefix=/usr
+  ./configure --prefix=/usr --disable-gconf --disable-kconfig || return 1
   make || return 1
-  make DESTDIR=${startdir}/pkg install
+  make DESTDIR="$pkgdir" install || return 1
 
-  install -D -m0644 $startdir/src/${pkgname}-${pkgver}/COPYING \
-                    $startdir/pkg/usr/share/licenses/$pkgname/COPYING
-
+  install -D -m644 COPYING "$pkgdir/usr/share/licenses/libmcs/COPYING" || return 1
 }
-
-md5sums=('69b46ae0a929f9c7bc480128f12586a3')
-md5sums=('0f0c779609b3481a79937c2e86660a99')
