--- a/liborigin/repos/extra-i686/PKGBUILD
+++ b/liborigin/repos/extra-i686/PKGBUILD
@@ -1,23 +1,22 @@
 # $Id$
-# Maintainer: damir <damir@archlinux.org>
+# Maintainer: Ronald van Haren <ronald.archlinux.org>
+# Contributor: damir <damir@archlinux.org>
 
 pkgname=liborigin
-pkgver=20071119
+pkgver=20080225
 pkgrel=1
 pkgdesc="A library for reading OriginLab OPJ project files"
 url="http://sourceforge.net/projects/liborigin/";
 arch=("i686" 'x86_64')
 depends=('gcc-libs')
 license=("GPL")
-source=("http://switch.dl.sourceforge.net/sourceforge/liborigin/liborigin-$pkgver.tar.gz")
-#source=("http://puzzle.dl.sourceforge.net/sourceforge/liborigin/${pkgname}-${pkgver}.tgz")
+source=("http://downloads.sourceforge.net/$pkgname/$pkgname-$pkgver.tar.gz")
 
 
 build() {
-	cd ${startdir}/src/${pkgname}-${pkgver}
+	cd $srcdir/${pkgname}-${pkgver}
 	cmake . -DCMAKE_INSTALL_PREFIX=/usr || return 1
 	make || return 1
-	make DESTDIR=$startdir/pkg install
+	make DESTDIR=$pkgdir install
 }
 
-md5sums=('ba5f2a1ee31089f78c2661e5ce4a3c54')
