--- a/repos/extra-x86_64/PKGBUILD
+++ b/repos/extra-x86_64/PKGBUILD
@@ -1,26 +1,27 @@
 # $Id$
-# Maintainer: damir <damir.archlinux.org>
+# Maintainer: Ronald van Haren <ronald.archlinux.org>
+# Contributor: damir <damir.archlinux.org>
 
 pkgname=muparser
-pkgver=1.28
-origver=128
+pkgver=1.30
 pkgrel=1
 pkgdesc="a fast math parser library"
-arch=(i686 x86_64)
+arch=('i686' 'x86_64')
 url="http://muparser.sourceforge.net/"
 depends=('glibc' 'gcc-libs')
 license=('custom')
-source=(http://heanet.dl.sourceforge.net/sourceforge/muparser/muparser_v$origver.tar.gz)
-
+source=(http://downloads.sourceforge.net/$pkgname/muparser_v130.tar.gz)
+md5sums=('f6b4d79aa0f762fd4bfeb38f47cf1d15')
 
 build() {
-  cd $startdir/src/$pkgname
+  cd $srcdir/$pkgname
   ./configure --prefix=/usr
   sed -i 's|$(libdir)/pkgconfig|$(DESTDIR)$(libdir)/pkgconfig|g' Makefile
   make || return 1
-  make DESTDIR=$startdir/pkg install
+  make DESTDIR=$pkgdir install
 
   # license
-  install -D -m644 License.txt ${startdir}/pkg/usr/share/licenses/${pkgname}/License
+  install -D -m644 License.txt \
+	$pkgdir/usr/share/licenses/${pkgname}/License
 }
-md5sums=('451a322db29d7fed159f4287e8b8e00d')
+
